Searchsuggest proxy and search/custom RSS feeds

--- a/pub/index.html
+++ b/pub/index.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-<h1>Mermade BBC RSS Feeds</h1>
-<table width="75%" align="center">
+<h1 align="center">Mermade BBC RSS Feeds</h1>
+<table width="70%" align="center">
 <tr><td>
 
-<table id="tblMain" width="95%" class="stripe">
+<table id="tblMain" width="100%" class="stripe">
 <thead>
 <tr><td>iPlayer Category</td><td>Radio Feed</td><td>TV Feed</td></tr>
 </thead>
@@ -45,9 +45,9 @@
 <tr><td>Drama Thriller</td><td><a href="/rss/radio/drama/thriller.rss">Radio Feed</a></td><td><a href="/rss/tv/drama/thriller.rss">TV Feed</a></td></tr>
 <tr><td>Drama War &amp; Disaster</td><td><a href="/rss/radio/drama/waranddisaster.rss">Radio Feed</a></td><td><a href="/rss/tv/drama/waranddisaster.rss">TV Feed</a></td></tr>
 <tr><td>Drama Western</td><td><a href="/rss/radio/drama/western.rss">Radio Feed</a></td><td><a href="/rss/tv/drama/western.rss">TV Feed</a></td></tr>
-<tr><td>Entertainment Entertainment</td><td><a href="/rss/radio/entertainment.rss">Radio Feed</a></td><td><a href="/rss/tv/entertainment.rss">TV Feed</a></td></tr>
+<tr><td>Entertainment</td><td><a href="/rss/radio/entertainment/all.rss">Radio Feed</a></td><td><a href="/rss/tv/entertainment.rss">TV Feed</a></td></tr>
 <tr><td>Entertainment Variety Shows</td><td><a href="/rss/radio/entertainment/varietyshows.rss">Radio Feed</a></td><td><a href="/rss/tv/entertainment/varietyshows.rss">TV Feed</a></td></tr>
-<tr><td>Factual Factual</td><td><a href="/rss/radio/factual.rss">Radio Feed</a></td><td><a href="/rss/tv/factual.rss">TV Feed</a></td></tr>
+<tr><td>Factual Factual</td><td><a href="/rss/radio/factual/all.rss">Radio Feed</a></td><td><a href="/rss/tv/factual.rss">TV Feed</a></td></tr>
 <tr><td>Factual Antiques</td><td><a href="/rss/radio/factual/antiques.rss">Radio Feed</a></td><td><a href="/rss/tv/factual/antiques.rss">TV Feed</a></td></tr>
 <tr><td>Factual / Arts Culture &amp; the Media</td><td><a href="/rss/radio/factual/artscultureandthemedia.rss">Radio Feed</a></td><td><a href="/rss/tv/factual/artscultureandthemedia.rss">TV Feed</a></td></tr>
 <tr><td>Factual Beauty &amp; Style</td><td><a href="/rss/radio/factual/beautyandstyle.rss">Radio Feed</a></td><td><a href="/rss/tv/factual/beautyandstyle.rss">TV Feed</a></td></tr>
@@ -67,12 +67,12 @@
 <tr><td>Factual Science &amp; Nature</td><td><a href="/rss/radio/factual/scienceandnature.rss">Radio Feed</a></td><td><a href="/rss/tv/factual/scienceandnature.rss">TV Feed</a></td></tr>
 <tr><td>Factual Travel</td><td><a href="/rss/radio/factual/travel.rss">Radio Feed</a></td><td><a href="/rss/tv/factual/travel.rss">TV Feed</a></td></tr>
 <tr><td>Films</td><td>Unavailable</td><td><a href="/rss/tv/formats/films.rss">TV Feed</a></td></tr>
-<tr><td>Learning Learning</td><td><a href="/rss/radio/learning.rss">Radio Feed</a></td><td><a href="/rss/tv/learning.rss">TV Feed</a></td></tr>
+<tr><td>Learning All</td><td><a href="/rss/radio/learning/all.rss">Radio Feed</a></td><td><a href="/rss/tv/learning.rss">TV Feed</a></td></tr>
 <tr><td>Learning Adults</td><td><a href="/rss/radio/learning/adults.rss">Radio Feed</a></td><td><a href="/rss/tv/learning/adults.rss">TV Feed</a></td></tr>
 <tr><td>Learning Pre-School</td><td><a href="/rss/radio/learning/preschool.rss">Radio Feed</a></td><td><a href="/rss/tv/learning/preschool.rss">TV Feed</a></td></tr>
 <tr><td>Learning Primary</td><td><a href="/rss/radio/learning/primary.rss">Radio Feed</a></td><td><a href="/rss/tv/learning/primary.rss">TV Feed</a></td></tr>
 <tr><td>Learning Secondary</td><td><a href="/rss/radio/learning/secondary.rss">Radio Feed</a></td><td><a href="/rss/tv/learning/secondary.rss">TV Feed</a></td></tr>
-<tr><td>Music Music</td><td><a href="/rss/radio/music/all.rss">Radio Feed</a></td><td><a href="/rss/tv/music/all.rss">TV Feed</a></td></tr>
+<tr><td>Music All</td><td><a href="/rss/radio/music/all.rss">Radio Feed</a></td><td><a href="/rss/tv/music/all.rss">TV Feed</a></td></tr>
 <tr><td>Music Classic Pop &amp; Rock</td><td><a href="/rss/radio/music/classicpopandrock.rss">Radio Feed</a></td><td><a href="/rss/tv/music/classicpopandrock.rss">TV Feed</a></td></tr>
 <tr><td>Music Classical</td><td><a href="/rss/radio/music/classical.rss">Radio Feed</a></td><td><a href="/rss/tv/music/classical.rss">TV Feed</a></td></tr>
 <tr><td>Music Country</td><td><a href="/rss/radio/music/country.rss">Radio Feed</a></td><td><a href="/rss/tv/music/country.rss">TV Feed</a></td></tr>
@@ -87,7 +87,7 @@
 <tr><td>Music Soul &amp; Reggae</td><td><a href="/rss/radio/music/soulandreggae.rss">Radio Feed</a></td><td><a href="/rss/tv/music/soulandreggae.rss">TV Feed</a></td></tr>
 <tr><td>Music World</td><td><a href="/rss/radio/music/world.rss">Radio Feed</a></td><td><a href="/rss/tv/music/world.rss">TV Feed</a></td></tr>
 <tr><td>News News</td><td><a href="/rss/radio/news.rss">Radio Feed</a></td><td><a href="/rss/tv/news.rss">TV Feed</a></td></tr>
-<tr><td>Sport Sport</td><td><a href="/rss/radio/sport.rss">Radio Feed</a></td><td><a href="/rss/tv/sport.rss">TV Feed</a></td></tr>
+<tr><td>Sport All</td><td><a href="/rss/radio/sport/all.rss">Radio Feed</a></td><td><a href="/rss/tv/sport.rss">TV Feed</a></td></tr>
 <tr><td>Sport American Football</td><td><a href="/rss/radio/sport/americanfootball.rss">Radio Feed</a></td><td><a href="/rss/tv/sport/americanfootball.rss">TV Feed</a></td></tr>
 <tr><td>Sport Athletics</td><td><a href="/rss/radio/sport/athletics.rss">Radio Feed</a></td><td><a href="/rss/tv/sport/athletics.rss">TV Feed</a></td></tr>
 <tr><td>Sport Baseball</td><td><a href="/rss/radio/sport/baseball.rss">Radio Feed</a></td><td><a href="/rss/tv/sport/baseball.rss">TV Feed</a></td></tr>
@@ -129,10 +129,28 @@
 </td></tr>
 </table>
 
+<br/>
+
+<div align="center">
+<form>
+	<label>Custom search:</label><input id="txtCustom" type="text"></input>
+	<input type="button" id="btnCustom" value="Generate"/>
+	<br/>
+	<a href="#" id='aCustom' style="display: none;">Custom RSS feed</a>
+</form>
+</div>
+
 	<script language="JavaScript" type='text/javascript'>
 		var table;
 		$(document).ready(function(){
 			$('#tblMain').DataTable();
+			$('#btnCustom').click(function(){
+				var search = $('#txtCustom').val();
+				if (search) {
+					$('#aCustom').attr('href','/rss/custom/'+encodeURIComponent(search)+'.rss');
+					$('#aCustom').show();
+				}
+			});
 		});
 	</script>
 
