Refactoring out to separate modules

--- a/pub/index.html
+++ b/pub/index.html
@@ -48,7 +48,7 @@
 <tr><td>Drama Western</td><td><a href="/rss/radio/drama/western.rss">Radio Feed</a></td><td><a href="/rss/tv/drama/western.rss">TV Feed</a></td></tr>
 <tr><td>Entertainment</td><td><a href="/rss/radio/entertainment/all.rss">Radio Feed</a></td><td><a href="/rss/tv/entertainment.rss">TV Feed</a></td></tr>
 <tr><td>Entertainment Variety Shows</td><td><a href="/rss/radio/entertainment/varietyshows.rss">Radio Feed</a></td><td><a href="/rss/tv/entertainment/varietyshows.rss">TV Feed</a></td></tr>
-<tr><td>Factual Factual</td><td><a href="/rss/radio/factual/all.rss">Radio Feed</a></td><td><a href="/rss/tv/factual.rss">TV Feed</a></td></tr>
+<tr><td>Factual All</td><td><a href="/rss/radio/factual/all.rss">Radio Feed</a></td><td><a href="/rss/tv/factual.rss">TV Feed</a></td></tr>
 <tr><td>Factual Antiques</td><td><a href="/rss/radio/factual/antiques.rss">Radio Feed</a></td><td><a href="/rss/tv/factual/antiques.rss">TV Feed</a></td></tr>
 <tr><td>Factual / Arts Culture &amp; the Media</td><td><a href="/rss/radio/factual/artscultureandthemedia.rss">Radio Feed</a></td><td><a href="/rss/tv/factual/artscultureandthemedia.rss">TV Feed</a></td></tr>
 <tr><td>Factual Beauty &amp; Style</td><td><a href="/rss/radio/factual/beautyandstyle.rss">Radio Feed</a></td><td><a href="/rss/tv/factual/beautyandstyle.rss">TV Feed</a></td></tr>
@@ -87,7 +87,7 @@
 <tr><td>Music Rock &amp; Indie</td><td><a href="/rss/radio/music/rockandindie.rss">Radio Feed</a></td><td><a href="/rss/tv/music/rockandindie.rss">TV Feed</a></td></tr>
 <tr><td>Music Soul &amp; Reggae</td><td><a href="/rss/radio/music/soulandreggae.rss">Radio Feed</a></td><td><a href="/rss/tv/music/soulandreggae.rss">TV Feed</a></td></tr>
 <tr><td>Music World</td><td><a href="/rss/radio/music/world.rss">Radio Feed</a></td><td><a href="/rss/tv/music/world.rss">TV Feed</a></td></tr>
-<tr><td>News News</td><td><a href="/rss/radio/news.rss">Radio Feed</a></td><td><a href="/rss/tv/news.rss">TV Feed</a></td></tr>
+<tr><td>News News</td><td><a href="/rss/radio/news/all.rss">Radio Feed</a></td><td><a href="/rss/tv/news/all.rss">TV Feed</a></td></tr>
 <tr><td>Sport All</td><td><a href="/rss/radio/sport/all.rss">Radio Feed</a></td><td><a href="/rss/tv/sport.rss">TV Feed</a></td></tr>
 <tr><td>Sport American Football</td><td><a href="/rss/radio/sport/americanfootball.rss">Radio Feed</a></td><td><a href="/rss/tv/sport/americanfootball.rss">TV Feed</a></td></tr>
 <tr><td>Sport Athletics</td><td><a href="/rss/radio/sport/athletics.rss">Radio Feed</a></td><td><a href="/rss/tv/sport/athletics.rss">TV Feed</a></td></tr>
