--- a/pub/pidNoData.html
+++ b/pub/pidNoData.html
@@ -4,17 +4,8 @@
 	</head>
 	<body>
 		<a href="https://github.com/mermade/bbc-rss"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
-		<h1>BBC Programme PID Inspector</h1>
-		<!-- <h2>For issues etc please use <a href="http://github.com/mermade/bbc-rss">Github</a> -->
-		<hr/>
-		<form>
-			<label for="txtPid">PID or URL: </label><input type="text" id="txtPid" name="txtPid"></input>
-			<br/>
-			<br/>
-			<button id="btnSegments" name="btnSegments" type="submit">Get Segment Info</button>
-			<br/>
-			<br/>
-			<button id="btnVersions" name="btnVersions" type="submit">Get Version Info</button>
-		</form>
+		<h1>PID not found, or has no relevant data</h1>
+		<br/>
+		<a href="/pid.html">Go back</a>
 	</body>
 </html>
