Add pid inspector to front page

--- a/pub/index.html
+++ b/pub/index.html
@@ -142,6 +142,7 @@
 	<br/>
 	<a href="#" id='aCustom' style="display: none;">Custom RSS feed</a>
 </form>
+<a href="/pid.html">PID Inspector</a>
 </div>
 
 <br />
