Add valid rss image to index.html

--- a/pub/index.html
+++ b/pub/index.html
@@ -137,6 +137,8 @@
 
 <div align="center">
 <form>
+	<img alt="Valid RSS" src="/images/valid-rss-rogers.png"/>
+	<br/><br/>
 	<label>Custom search:</label><input id="txtCustom" type="text"></input>
 	<input type="button" id="btnCustom" value="Generate"/>
 	<br/>
