--- a/pub/index.html
+++ b/pub/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>Mermade BBC RSS Feeds</title>
+<head><title>Mermade BBC iPlayer RSS Feeds</title>
 
 	<link rel="stylesheet" type="text/css" href="/css/datatables.css" media="screen">
 	<link rel="stylesheet" type="text/css" href="/css/smart-green.css" media="screen">
@@ -14,7 +14,7 @@
 <img alt="Valid RSS" style="position: absolute; top: 5; left: 5; border: 0;" src="/images/valid-rss-rogers.png"/>
 
 <div class="smart-green">
-<h1 align="center">Mermade BBC RSS Feeds</h1>
+<h1 align="center">Mermade BBC iPlayer RSS Feeds</h1>
 <!--<table width="70%" align="center">
 <tr><td>-->
 
