Fix tv/factual/all etc

--- a/pub/index.html
+++ b/pub/index.html
@@ -61,7 +61,7 @@
 <tr><td>Drama Western</td><td><a href="/rss/radio/drama/western.rss">Radio Feed</a></td><td><a href="/rss/tv/drama/western.rss">TV Feed</a></td></tr>
 <tr><td>Entertainment</td><td><a href="/rss/radio/entertainment/all.rss">Radio Feed</a></td><td><a href="/rss/tv/entertainment.rss">TV Feed</a></td></tr>
 <tr><td>Entertainment Variety Shows</td><td><a href="/rss/radio/entertainment/varietyshows.rss">Radio Feed</a></td><td><a href="/rss/tv/entertainment/varietyshows.rss">TV Feed</a></td></tr>
-<tr><td>Factual All</td><td><a href="/rss/radio/factual/all.rss">Radio Feed</a></td><td><a href="/rss/tv/factual.rss">TV Feed</a></td></tr>
+<tr><td>Factual All</td><td><a href="/rss/radio/factual/all.rss">Radio Feed</a></td><td><a href="/rss/tv/factual/all.rss">TV Feed</a></td></tr>
 <tr><td>Factual Antiques</td><td><a href="/rss/radio/factual/antiques.rss">Radio Feed</a></td><td><a href="/rss/tv/factual/antiques.rss">TV Feed</a></td></tr>
 <tr><td>Factual / Arts Culture &amp; the Media</td><td><a href="/rss/radio/factual/artscultureandthemedia.rss">Radio Feed</a></td><td><a href="/rss/tv/factual/artscultureandthemedia.rss">TV Feed</a></td></tr>
 <tr><td>Factual Beauty &amp; Style</td><td><a href="/rss/radio/factual/beautyandstyle.rss">Radio Feed</a></td><td><a href="/rss/tv/factual/beautyandstyle.rss">TV Feed</a></td></tr>
@@ -82,7 +82,7 @@
 <tr><td>Factual Travel</td><td><a href="/rss/radio/factual/travel.rss">Radio Feed</a></td><td><a href="/rss/tv/factual/travel.rss">TV Feed</a></td></tr>
 <tr><td>Films</td><td>Unavailable</td><td><a href="/rss/tv/formats/films.rss">TV Feed</a></td></tr>
 <tr><td>Games &amp; Quizzes</td><td><a href="/rss/radio/formats/gamesandquizzes.rss">Radio Feed</a></td><td><a href="/rss/tv/formats/gamesandquizzes.rss">TV Feed</a></td></tr>
-<tr><td>Learning All</td><td><a href="/rss/radio/learning/all.rss">Radio Feed</a></td><td><a href="/rss/tv/learning.rss">TV Feed</a></td></tr>
+<tr><td>Learning All</td><td><a href="/rss/radio/learning/all.rss">Radio Feed</a></td><td><a href="/rss/tv/learning/all.rss">TV Feed</a></td></tr>
 <tr><td>Learning Adults</td><td><a href="/rss/radio/learning/adults.rss">Radio Feed</a></td><td><a href="/rss/tv/learning/adults.rss">TV Feed</a></td></tr>
 <tr><td>Learning Pre-School</td><td><a href="/rss/radio/learning/preschool.rss">Radio Feed</a></td><td><a href="/rss/tv/learning/preschool.rss">TV Feed</a></td></tr>
 <tr><td>Learning Primary</td><td><a href="/rss/radio/learning/primary.rss">Radio Feed</a></td><td><a href="/rss/tv/learning/primary.rss">TV Feed</a></td></tr>
@@ -108,7 +108,7 @@
 <tr><td>Phone-ins</td><td><a href="/rss/radio/formats/phoneins.rss">Radio Feed</a></td><td>Unavailable</td></tr>
 <tr><td>Readings</td><td><a href="/rss/radio/formats/readings.rss">Radio Feed</a></td><td>Unavailable</td></tr>
 <tr><td>Reality</td><td>Unavailable</td><td><a href="/rss/tv/formats/reality.rss">TV Feed</a></td></tr>
-<tr><td>Sport All</td><td><a href="/rss/radio/sport/all.rss">Radio Feed</a></td><td><a href="/rss/tv/sport.rss">TV Feed</a></td></tr>
+<tr><td>Sport All</td><td><a href="/rss/radio/sport/all.rss">Radio Feed</a></td><td><a href="/rss/tv/sport/all.rss">TV Feed</a></td></tr>
 <tr><td>Sport American Football</td><td><a href="/rss/radio/sport/americanfootball.rss">Radio Feed</a></td><td><a href="/rss/tv/sport/americanfootball.rss">TV Feed</a></td></tr>
 <tr><td>Sport Athletics</td><td><a href="/rss/radio/sport/athletics.rss">Radio Feed</a></td><td><a href="/rss/tv/sport/athletics.rss">TV Feed</a></td></tr>
 <tr><td>Sport Baseball</td><td><a href="/rss/radio/sport/baseball.rss">Radio Feed</a></td><td><a href="/rss/tv/sport/baseball.rss">TV Feed</a></td></tr>
