Add channel4 categories / channels / AD

--- a/pub/index.html
+++ b/pub/index.html
@@ -165,6 +165,8 @@
 	<a href="#" id='aCustom' class="button" style="display: none;">Click here for your custom RSS feed</a>
 	<span>&nbsp;</span>
 	<a class="button" href="/pid.html">New! PID Inspector</a>
+	<span>&nbsp;</span>
+	<a class="button" href="/channel4.html">New! Channel4</a>
 	</div>
 </form>
 </div>
