--- a/pub/pid.html
+++ b/pub/pid.html
@@ -15,6 +15,8 @@
 			<button id="btnSegments" class="button" name="btnSegments" type="submit">Get Segment Info</button>
 			<span>&nbsp;</span>
 			<button id="btnVersions" class="button" name="btnVersions" type="submit">Get Version Info</button>
+			<span>&nbsp;</span>
+			<button id="btnExtract" class="button" name="btnExtract" type="submit">Extract PIDs</button>
 			</div>
 		</form>
 		</div>
