Add accessibility feeds, fixes #1

--- a/pub/index.html
+++ b/pub/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
 <head><title>Mermade BBC iPlayer RSS Feeds</title>
 
 	<link rel="stylesheet" type="text/css" href="/css/datatables.css" media="screen">
@@ -24,6 +24,8 @@
 </thead>
 <tbody>
 
+<tr><td>Accessibility / Audio-Described</td><td>Unavailable</td><td><a href="/rss/tv/accessibility/audio-described.rss">TV Feed</a></td></tr>
+<tr><td>Accessibility / Signed</td><td>Unavailable</td><td><a href="/rss/tv/accessibility/signed.rss">TV Feed</a></td></tr>
 <tr><td>Animation</td><td>Unavailable</td><td><a href="/rss/tv/formats/animation.rss">TV Feed</a></td></tr>
 <tr><td>Appeals</td><td><a href="/rss/radio/formats/appeals.rss">Radio Feed</a></td><td>Unavailable</td></tr>
 <tr><td>Bulletins</td><td><a href="/rss/radio/formats/bulletins.rss">Radio Feed</a></td><td><a href="/rss/tv/formats/bulletins.rss">TV Feed</a></td></tr>
