Add music/mixes format PT016

--- a/pub/index.html
+++ b/pub/index.html
@@ -101,6 +101,7 @@
 <tr><td>Music Folk</td><td><a href="/rss/radio/music/folk.rss">Radio Feed</a></td><td><a href="/rss/tv/music/folk.rss">TV Feed</a></td></tr>
 <tr><td>Music Hip Hop RnB &amp; Dancehall</td><td><a href="/rss/radio/music/hiphoprnbanddancehall.rss">Radio Feed</a></td><td><a href="/rss/tv/music/hiphoprnbanddancehall.rss">TV Feed</a></td></tr>
 <tr><td>Music Jazz &amp; Blues</td><td><a href="/rss/radio/music/jazzandblues.rss">Radio Feed</a></td><td><a href="/rss/tv/music/jazzandblues.rss">TV Feed</a></td></tr>
+<tr><td>Music Mixes</td><td><a href="/rss/radio/formats/mixes.rss">Radio Feed</a></td><td><a href="/rss/tv/formats/mixes.rss">TV Feed</a></td></tr>
 <tr><td>Music Pop &amp; Chart</td><td><a href="/rss/radio/music/popandchart.rss">Radio Feed</a></td><td><a href="/rss/tv/music/popandchart.rss">TV Feed</a></td></tr>
 <tr><td>Music Rock &amp; Indie</td><td><a href="/rss/radio/music/rockandindie.rss">Radio Feed</a></td><td><a href="/rss/tv/music/rockandindie.rss">TV Feed</a></td></tr>
 <tr><td>Music Soul &amp; Reggae</td><td><a href="/rss/radio/music/soulandreggae.rss">Radio Feed</a></td><td><a href="/rss/tv/music/soulandreggae.rss">TV Feed</a></td></tr>
