Add feeds for brand/series pids. Fixes #3

--- a/pub/pid.html
+++ b/pub/pid.html
@@ -12,11 +12,13 @@
 				<span>PID or URL:</span><input type="text" id="txtPid" name="txtPid"></input>
 			</label>
 			<div class="sg-button-box">
-			<button id="btnSegments" class="button" name="btnSegments" type="submit">Get Segment Info</button>
-			<span>&nbsp;</span>
-			<button id="btnVersions" class="button" name="btnVersions" type="submit">Get Version Info</button>
-			<span>&nbsp;</span>
-			<button id="btnExtract" class="button" name="btnExtract" type="submit">Extract PIDs</button>
+				<button id="btnSegments" class="button" name="btnSegments" type="submit">Get Segment Info</button>
+				<span>&nbsp;</span>
+				<button id="btnVersions" class="button" name="btnVersions" type="submit">Get Version Info</button>
+				<span>&nbsp;</span>
+				<button id="btnExtract" class="button" name="btnExtract" type="submit">Extract PIDs</button>
+				<span>&nbsp;</span>
+				<button id="btnSingle" class="button" name="btnSingle" type="submit">PID feed</button>
 			</div>
 		</form>
 		</div>
